# promptlab

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  test_basic_functionality.py
examples/: classify-sentiment.yaml  extract-entities.yaml  extract-keywords.yaml
promptlab/: __init__.py  __main__.py  cli.py  compare.py  config.py  display.py  matching.py  models.py  runner.py  storage.py  utils.py  validation.py
tests/: __init__.py  test_cli.py  test_config.py  test_matching.py  test_storage.py
